force-app/main/default/objects/Unify_National_Accounts_Pricing__c/Unify_National_Accounts_Pricing__c.object-meta.xml
<CustomObject>
    <label>Unify National Account Pricing</label>
    <nameField>
        <label>Unify National Accounts Pricing Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Unify National Account Pricing</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>