force-app/main/default/objects/Unify_National_Accounts_Pricing__c/fields/Unify_NA_AlternatePrice__c.field-meta.xml
<CustomField>
    <fullName>Unify_NA_AlternatePrice__c</fullName>
    <label>Unify NA AlternatePrice</label>
    <precision>11</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>