force-app/main/default/objects/Unify_National_Accounts_Pricing__c/fields/Unify_NA_Brand__c.field-meta.xml
<CustomField>
    <fullName>Unify_NA_Brand__c</fullName>
    <label>Unify NA Brand</label>
    <length>4</length>
    <type>Text</type>
</CustomField>