force-app/main/default/objects/Unify_National_Accounts_Pricing__c/fields/Unify_NA_Break2Quantity__c.field-meta.xml
<CustomField>
    <fullName>Unify_NA_Break2Quantity__c</fullName>
    <label>Unify NA Break2Quantity</label>
    <precision>9</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>