force-app/main/default/objects/Unify_National_Accounts_Pricing__c/fields/Unify_NA_Contract_Group_ID__c.field-meta.xml
<CustomField>
    <fullName>Unify_NA_Contract_Group_ID__c</fullName>
    <label>Unify NA Contract Group ID</label>
    <length>6</length>
    <type>Text</type>
</CustomField>