force-app/main/default/objects/Unify_National_Accounts_Pricing__c/fields/Unify_NA_DateBegin__c.field-meta.xml
<CustomField>
    <fullName>Unify_NA_DateBegin__c</fullName>
    <label>Unify NA DateBegin</label>
    <length>40</length>
    <type>Text</type>
</CustomField>