force-app/main/default/objects/Unify_National_Accounts_Pricing__c/fields/Unify_NA_Division__c.field-meta.xml
<CustomField>
    <fullName>Unify_NA_Division__c</fullName>
    <label>Unify NA Division</label>
    <length>2</length>
    <type>Text</type>
</CustomField>