force-app/main/default/objects/Unify_National_Accounts_Pricing__c/fields/Unify_NA_Item_CompositeKey__c.field-meta.xml
<CustomField>
    <fullName>Unify_NA_Item_CompositeKey__c</fullName>
    <label>Unify NA Item CompositeKey</label>
    <length>255</length>
    <type>Text</type>
</CustomField>