force-app/main/default/objects/Unify_National_Accounts_Pricing__c/fields/Unify_NA_ItemDescription__c.field-meta.xml
<CustomField>
    <fullName>Unify_NA_ItemDescription__c</fullName>
    <label>Unify NA ItemDescription</label>
    <length>200</length>
    <type>Text</type>
</CustomField>