force-app/main/default/objects/Unify_National_Accounts_Pricing__c/fields/Unify_NA_National_Account_Pricing_ID__c.field-meta.xml
<CustomField>
    <fullName>Unify_NA_National_Account_Pricing_ID__c</fullName>
    <label>Unify NA National Account Pricing ID</label>
    <length>200</length>
    <type>Text</type>
</CustomField>