force-app/main/default/objects/Unify_National_Accounts_Pricing__c/fields/Unify_NA_QtyBreakFlag__c.field-meta.xml
<CustomField>
    <fullName>Unify_NA_QtyBreakFlag__c</fullName>
    <label>Unify NA QtyBreakFlag</label>
    <length>1</length>
    <type>Text</type>
</CustomField>