force-app/main/default/objects/Unify_National_Accounts_Pricing__c/fields/Unify_NA_ShortItem__c.field-meta.xml
<CustomField>
    <fullName>Unify_NA_ShortItem__c</fullName>
    <label>Unify NA ShortItem</label>
    <length>30</length>
    <type>Text</type>
</CustomField>