force-app/main/default/objects/Unify_National_Accounts_Pricing__c/fields/Unify_NA_Vendor_Part_Number__c.field-meta.xml
<CustomField>
    <fullName>Unify_NA_Vendor_Part_Number__c</fullName>
    <label>Unify NA Vendor Part Number</label>
    <length>40</length>
    <type>Text</type>
</CustomField>