force-app/main/default/objects/Unify_National_Accounts_Pricing__c/fields/Unify_NAP_ActionCd__c.field-meta.xml
<CustomField>
    <fullName>Unify_NAP_ActionCd__c</fullName>
    <label>Unify NAP ActionCd</label>
    <length>10</length>
    <type>Text</type>
</CustomField>