force-app/main/default/objects/Unify_National_Accounts_Pricing__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Unify_NA_ShortItem__c</field>
        <operation>contains</operation>
        <value>10727930</value>
    </filters>
    <label>All</label>
</ListView>