force-app/main/default/objects/Unify_National_Accounts_Pricing__c/listViews/All_Unify_Account_Pricing.listView-meta.xml
<ListView>
    <fullName>All_Unify_Account_Pricing</fullName>
    <columns>NAME</columns>
    <columns>Unify_NA_ShortItem__c</columns>
    <columns>Unify_NA_Contract_Group_ID__c</columns>
    <columns>Unify_NAP_ActionCd__c</columns>
    <columns>Unify_NA_Division__c</columns>
    <columns>Unify_NA_DateBegin__c</columns>
    <columns>Unify_NA_DateEnd__c</columns>
    <columns>UPDATEDBY_USER</columns>
    <columns>LAST_UPDATE</columns>
    <filterScope>Everything</filterScope>
    <label>All Unify Account Pricing</label>
</ListView>