force-app/main/default/objects/Unify_National_Accounts_Pricing__c/listViews/New_all.listView-meta.xml
<ListView>
    <fullName>New_all</fullName>
    <columns>NAME</columns>
    <columns>UPDATEDBY_USER</columns>
    <columns>LAST_UPDATE</columns>
    <columns>Unify_NA_Contract_Group_ID__c</columns>
    <columns>Unify_NA_DateBegin__c</columns>
    <columns>Unify_NA_Division__c</columns>
    <columns>Unify_NA_Item_CompositeKey__c</columns>
    <columns>Unify_NA_PricingType__c</columns>
    <columns>Unify_NA_ShortItem__c</columns>
    <columns>Unify_NAP_ActionCd__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>LAST_UPDATE</field>
        <operation>greaterOrEqual</operation>
        <value>11/3/2021 12:00 AM</value>
    </filters>
    <filters>
        <field>Unify_NAP_ActionCd__c</field>
        <operation>equals</operation>
        <value>D</value>
    </filters>
    <label>New all</label>
</ListView>